kubernetes/http-route-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miracle-backend-route
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "dev.kenstudy.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/main"
      backendRefs:
        - name: miracle-main-svc
          port: 9192
    - matches:
        - path:
            type: PathPrefix
            value: "/payment"
      backendRefs:
        - name: miracle-payment-svc
          port: 9193
