kubernetes/http-route-client.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miracle-client-route
  labels:
    app: miracle-client-route
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "hotel.kenstudy.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: miracle-client-svc
          port: 8080
